--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "amazon-cognito-identity-js": "^4.5.0",
     "antd": "^4.7.2",
     "aws-amplify": "^3.3.4",
     "jwt-decode": "^3.0.0",
