--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jwt-decode": "^2.2.1",
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.4"
   }
